# arborio

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  entity-schema.txt  flake.nix  shell.nix  strawberry.yaml
.github/workflows/: rust.yml
conf/: everest.yaml
conf/Arborio/entities/: badeline_boost.yaml  badeline_boss.yaml  badeline_boss_falling_block.yaml  badeline_boss_moving_block.yaml  badeline_chaser.yaml  bird.yaml  bird_fling.yaml  bird_path.yaml  block_field.yaml  bonfire.yaml  booster.yaml  bounce_block.yaml  break_block.yaml  bridge.yaml  bridge_fixed.yaml  bumper.yaml  cassette.yaml  cassette_block.yaml  checkpoint.yaml  cliffflag.yaml  cliffside_flag.yaml  clothesline.yaml  cloud.yaml  clutter_books.yaml  clutter_boxes.yaml  clutter_cabinet.yaml  clutter_door.yaml  clutter_switch.yaml  clutter_towels.yaml  cobweb.yaml  condition_block.yaml  core_switch.yaml  crumble_block.yaml  crumble_wall_on_rumble.yaml  dash_block.yaml  dash_switch_h.yaml  dash_switch_v.yaml  debris.yaml  default.yaml  door.yaml  (+86 more)
conf/Arborio/entities/CommunalHelper/: Melvin.yaml
conf/Arborio/entities/FrostHelper/: PlusOneRefill.yaml
conf/Arborio/entities/MaxHelpingHand/: HorizontalRoomWrap.yaml
conf/Arborio/entities/OutbackHelper/: Portal.yaml
conf/Arborio/tilers/: debris.xml  jumpthru.xml  woodplatform.xml
conf/Arborio/triggers/: camera_offset.yaml  camera_target.yaml  change_respawn.yaml  default.yaml  event.yaml
conf/entities/: badeline_boost.yaml  badeline_boss_moving_block.yaml  block_field.yaml  bonfire.yaml  bounce_block.yaml  break_block.yaml  bumper.yaml  cassette.yaml  cassette_block.yaml  checkpoint.yaml  cloud.yaml  clutter_door.yaml  clutter_towels.yaml  cobweb.yaml  condition_block.yaml  crumble_block.yaml  crumble_wall_on_rumble.yaml  dash_block.yaml  dash_switch_h.yaml  debris.yaml  default.yaml  dream_block.yaml  exit_block.yaml  fake_block.yaml  fake_wall.yaml  falling_block.yaml  feather.yaml  fire_block.yaml  fireball_iceball.yaml  floaty_space_block.yaml  flutterbird.yaml  glider.yaml  goldberry.yaml  heart.yaml  jumpthru.yaml  kevin_block.yaml  key.yaml  light_beam.yaml  lightning.yaml  locked_door.yaml  (+42 more)
conf/tilers/: cassette.xml
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/gfxloader/: Cargo.toml
crates/gfxloader/src/: atlas_img.rs  autotiler.rs  lib.rs
crates/maploader/: Cargo.toml
crates/maploader/src/: action.rs  binel.rs  from_binel.rs  lib.rs  map_struct.rs
crates/maploader/src/binel/: parser.rs  writer.rs
crates/modloader/: Cargo.toml
crates/modloader/src/: aggregate.rs  discovery.rs  everest_yaml.rs  lib.rs  mapstruct_plus_config.rs  module.rs  selectable.rs
crates/modloader/src/config/: drawing.rs  entity.rs  expression.rs  mod.rs  styleground.rs  trigger.rs
crates/state/: Cargo.toml
crates/state/src/: lenses.rs  lib.rs  palette_item.rs  rendering.rs
crates/state/src/data/: action.rs  app.rs  app_apply.rs  config_editor.rs  mod.rs  project_map.rs  selection.rs  sid.rs  tabs.rs
crates/state/src/tools/: bucket.rs  hand.rs  mod.rs  pencil.rs  room.rs  selection.rs  style.rs
crates/utils/: Cargo.toml
crates/utils/src/: interned.rs  lib.rs  resources.rs  units.rs  uuid.rs
crates/walker/: Cargo.toml
crates/walker/src/: embedded.rs  folder.rs  lib.rs  zip.rs
crates/widgets/: Cargo.toml
crates/widgets-common/: Cargo.toml
crates/widgets-common/src/: advanced_tweaker.rs  basic_tweaker.rs  common.rs  confirm_delete.rs  container_model.rs  label_with_pencil.rs  lib.rs  list_palette.rs  textedit_dropdown.rs  validator_box.rs
crates/widgets-editor/: Cargo.toml
crates/widgets-editor-entity/: Cargo.toml
crates/widgets-editor-entity/src/: entity_tweaker.rs  lib.rs
crates/widgets-editor-room/: Cargo.toml
crates/widgets-editor-room/src/: lib.rs  room_tweaker.rs
crates/widgets-editor-style/: Cargo.toml
crates/widgets-editor-style/src/: lib.rs  style_tweaker.rs
crates/widgets-editor/src/: editor.rs  lib.rs
crates/widgets-tilepicker/: Cargo.toml
crates/widgets-tilepicker/src/: lib.rs  tile_palette.rs
crates/widgets/src/: common.rs  editor.rs  entity_tweaker.rs  lib.rs  list_palette.rs  main_widget.rs  room_tweaker.rs  style_tweaker.rs  tile_palette.rs
crates/widgets/src/tabs/: config_editor.rs  editor.rs  installation.rs  logs.rs  map_meta.rs  mod.rs  project.rs
derive/src/: lib.rs
src/: app_state.rs  assets.rs  atlas_img.rs  auto_saver.rs  autotiler.rs  editor_widget.rs  entity_config.rs  entity_expression.rs  from_binel.rs  image_view.rs  lenses.rs  logging.rs  main.rs  map_struct.rs  palette_widget.rs  style.css  tweaker_widget.rs  units.rs
src/celeste_mod/: aggregate.rs  discovery.rs  entity_config.rs  entity_expression.rs  everest_yaml.rs  mod.rs  module.rs
src/celeste_mod/config/: drawing.rs  entity.rs  expression.rs  mod.rs  trigger.rs
src/celeste_mod/walker/: embedded.rs  folder.rs  mod.rs  zip.rs
src/config/: aggregate.rs  entity_config.rs  entity_expression.rs  everest_yaml.rs  mod.rs  module.rs
src/config/walker/: embedded.rs  folder.rs  mod.rs  zip.rs
src/tests/: loading_all.rs  mod.rs
src/tools/: hand.rs  mod.rs  pencil.rs  room.rs  selection.rs  style.rs
src/widgets/: common.rs  editor.rs  editor_widget.rs  entity_tweaker.rs  list_palette.rs  mod.rs  palette_widget.rs  room_tweaker.rs  style_tweaker.rs  tile_palette.rs  tweaker_widget.rs
src/widgets/tabs/: config_editor.rs  editor.rs  editor_tab.rs  installation.rs  installation_tab.rs  logs.rs  mod.rs  project.rs  project_tab.rs
