[package]
name = "arborio"
version = "0.1.0"
authors = ["Audrey Dutcher <audrey@rhelmot.io>", "Skye Jensen <me@skye-c.at>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["derive"]

[dependencies]
# celeste deps
arborio-derive = { path = "./derive" }
celeste = "^2"

# language features and data structures
lazy_static = "^1.4"
byteorder = "^1.4"
include_dir = "^0.7"
itertools = "^0.10"
enum-iterator = "^0.7"
parking_lot = "^0.12"
lru = "^0.7"
enum_dispatch = "^0.3"
rand = "0.8.5"

# system interaction
confy = "^0.4"
dialog = "^0.3"

# configuration and parsing
serde = { version = "^1.0", features = ["derive" ] }
serde-xml-rs = "^0.5"
serde_yaml = "^0.8"
nom = "^7.1"
zip = "^0.5"
walkdir = "^2"
regex = "^1.5"

# graphics
# vizia = { path = "../../rust/VIZIA", default-features = false, features = ["winit", "clipboard"] }
vizia = {git = "https://github.com/rhelmot/VIZIA", rev = "33dcd83597ade55a1e181a485ef28f9b17ac48b7" }
# femtovg = { version = "0.3.0", default-features = false, features = ["image-loading"] } # inherit from vizia
femtovg = { git = "https://github.com/femtovg/femtovg", rev = "87fe627794f3f793d8e3a338c838a2f8e8a8aa9d", default-features = false, features = ["image-loading"] }
# femtovg = { path = "../../rust/femtovg", features = ["image-loading"] }
image = { version = "0.24.0", default-features = false, features = ["png"] } # inherit from femtovg
imgref = "1.6.1"  # inherit from femtovg
rgb = "0.8.20"  # inherit from femtovg
euclid = "^0.22"
num-traits = "0.2.10" # inherit from euclid

# misc
Inflector = "^0.11"

[profile.dev.package.vizia_core]
opt-level = 2
[profile.dev.package.femtovg]
opt-level = 2
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.adler]
opt-level = 3
