[package]
name = "arborio"
version = "0.1.0"
authors = ["Audrey Dutcher <audrey@rhelmot.io>", "Skye Jensen <me@skye-c.at>"]
edition = "2021"
rust-version = "1.60"

[[bin]]
name = "arborio"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/derive",
    "crates/modloader",
    "crates/maploader",
    "crates/gfxloader",
    "crates/widgets",
    "crates/state",
    "crates/utils",
    "crates/widgets-common",
    "crates/widgets-editor",
    "crates/widgets-editor-room",
    "crates/widgets-editor-style",
    "crates/widgets-editor-entity",
    "crates/widgets-tilepicker",
]

[features]
default = ["x11", "wayland"]
x11 = ["arborio-utils/x11"]
wayland = ["arborio-utils/wayland"]

[dependencies]
# celeste deps
arborio-derive = { path = "./crates/derive", default-features = false }
arborio-modloader = { path = "./crates/modloader", default-features = false }
arborio-maploader = { path = "./crates/maploader", default-features = false }
arborio-gfxloader = { path = "./crates/gfxloader", default-features = false }
arborio-widgets = { path = "./crates/widgets", default-features = false }
arborio-state = { path = "./crates/state", default-features = false }
arborio-utils = { path = "./crates/utils", default-features = false }
arborio-walker = { path = "./crates/walker", default-features = false }

log = "0.4.16"
image = { version = "0.24.0", default-features = false, features = ["png"] } # inherit from femtovg

[patch.crates-io]
smithay-clipboard = { path = "../../rust/smithay-clipboard" }

[dev-dependencies]
celeste = "^2"
confy = "^0.4"

[profile.dev]
opt-level = 0
lto = "off"
[profile.dev.package.arborio-gfxloader]
opt-level = 2
[profile.dev.package.vizia_core]
opt-level = 2
[profile.dev.package.femtovg]
opt-level = 2
[profile.dev.package.png]
opt-level = 3
[profile.dev.package.adler]
opt-level = 3
[profile.dev.package.zip]
opt-level = 3
