[package]
name = "arborio-gfxloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arborio-walker = { path = "../walker" }
arborio-utils = { path = "../utils", default-features = false }

Inflector = { version = "^0.11", default-features = false }
image = { version = "0.24.0", default-features = false, features = ["png"] } # inherit from femtovg
serde-xml-rs = "^0.6"
byteorder = "^1.4"
imgref = "1.6.1"  # inherit from femtovg
rgb = "0.8.20"  # inherit from femtovg
log = "0.4.16"
serde = { version = "^1.0", features = ["derive"] }  # TODO: how can we not duplicate this dep and instead re-export it from utils?
