[package]
name = "arborio-maploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arborio-utils = { path = "../utils", default-features = false }
arborio-derive = { path = "../derive", default-features = false }

itertools = "^0.10"
celeste = "^2"
serde = { version = "^1.0", features = ["derive"] }  # TODO: how can we not duplicate this dep and instead re-export it from utils?
lazy_static = "^1.4"
regex = { version = "^1.5", default-features = false, features = ["std"] }
