[package]
name = "arborio-maploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arborio-utils = { path = "../utils", default-features = false }
arborio-derive = { path = "../derive", default-features = false }

byteorder = "^1.4"
itertools = "^0.10"
once_cell = "^1.17"
nom = "^7.1"
nom-varint = "^0.5"
regex = { version = "^1.5", default-features = false, features = ["std"] }
serde = { version = "^1.0", features = ["derive"] }  # TODO: how can we not duplicate this dep and instead re-export it from utils?
unsigned-varint = "^0.7"
