[package]
name = "arborio-modloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arborio-utils = { path = "../utils", default-features = false }
arborio-maploader = { path = "../maploader", default-features = false }
arborio-walker = { path = "../walker", default-features = false }
arborio-gfxloader = { path = "../gfxloader", default-features = false }

lazy_static = "^1.4"
serde_yaml = "^0.8"
nom = "^7.1"
serde = { version = "^1.0", features = ["derive"] }  # TODO: how can we not duplicate this dep and instead re-export it from utils?
itertools = "^0.10"
log = "0.4.16"
walkdir = "^2"
