[package]
name = "arborio-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["x11", "wayland"]
x11 = ["vizia/x11"]
wayland = ["vizia/wayland"]

[dependencies]
euclid = { version = "^0.22", features = ["serde"] }
parking_lot = "^0.12"
serde = { version = "^1.0", features = ["derive"] }
lazy_static = "^1.4"

#vizia = { path = "../../../../rust/vizia", default-features = false, features = ["winit", "clipboard"] }
vizia = {git = "https://github.com/vizia/vizia", rev = "8359c4dfe0234ba53ed245a42612e9e0967d46c4", default-features = false, features = ["winit", "clipboard"] }  # main
