[package]
name = "arborio-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["x11", "wayland"]
x11 = ["vizia/x11"]
wayland = ["vizia/wayland"]

[dependencies]
euclid = { version = "^0.22", features = ["serde"] }
parking_lot = "^0.12"
serde = { version = "^1.0", features = ["derive"] }
lazy_static = "^1.4"

[dependencies.vizia]
# path = "../../../VIZIA"
git = "https://github.com/rhelmot/vizia"
rev = "94a83a5f1e76ce9faf4ba67141af5890c30f67cf"
default-features = true
features = ["winit", "clipboard", "embedded_fonts"] # main
